# c-unix-sandbox

./: README.md  http-echo.c
http-echo/: CMakeLists.txt  http-echo.c
http-serv/: http-echo.c
philosophers/: CMakeLists.txt  README.MD  filoz.doc  filoz1  filoz2.c  philoaophers3.c  philosophers_deadlock.c  philosophers_semaphore.c  philosophers_starvation.c
shell-terminal/: CMakeLists.txt  shell  shell.c
shift-registers/: CMakeLists.txt  README.MD  a51.c  geffe.c  lfsr.c  lfsr.h  shrinker.c  stopngo.c
